solved btn issue; was blocked by invisible end game msg; z-index helped

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ header {
     width: 220px;
     text-align: center;
     transition: all ease-in-out 1000ms;
+    z-index: 2;
 }
 input {
     display: inline;
@@ -117,6 +118,7 @@ input {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 1;
 }
 
 h4 {
@@ -164,6 +166,7 @@ main {
     background-color: rgba(255, 255, 255, 0.2);
     width: 100%;
     height: 100%;
+    position: relative;
     display: flex;
     justify-content: center;
     /* align-items: flex-end; */
@@ -277,6 +280,7 @@ main {
     background-color: red;
     text-align: center;
     transition: all ease-in 300ms;
+    z-index: -1;
 }
 
 .clear-x-wrapper {
